// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Select Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div>
    <div
      className="select-container"
    >
      <select
        aria-label="Select"
        className="select"
        id="#1"
        onChange={[Function]}
        value={2}
      >
        <option
          value={null}
        />
        <option
          value={1}
        >
          First
        </option>
        <option
          value={2}
        >
          Second
        </option>
        <option
          value={3}
        >
          Third
        </option>
      </select>
      <svg
        className="icon-select"
        height="21"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.5.5-4 4-4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          transform="translate(6 8)"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Select Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div>
    <div
      className="select-container"
    >
      <select
        aria-label="Select"
        className="select"
        id="#3"
        onChange={[Function]}
        value={2}
      >
        <option
          value={null}
        />
        <option
          value={1}
        >
          First
        </option>
        <option
          value={2}
        >
          Second
        </option>
        <option
          value={3}
        >
          Third
        </option>
      </select>
      <svg
        className="icon-select"
        height="21"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.5.5-4 4-4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          transform="translate(6 8)"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Select Label Show 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div>
    <div
      className="select-container"
    >
      <select
        aria-label="Select"
        className="select"
        id="#4"
        onChange={[Function]}
        value={2}
      >
        <option
          value={null}
        />
        <option
          value={1}
        >
          First
        </option>
        <option
          value={2}
        >
          Second
        </option>
        <option
          value={3}
        >
          Third
        </option>
      </select>
      <svg
        className="icon-select"
        height="21"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.5.5-4 4-4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          transform="translate(6 8)"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Select Value 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div>
    <div
      className="select-container"
    >
      <select
        aria-label="Select"
        className="select"
        id="#2"
        onChange={[Function]}
        value={2}
      >
        <option
          value={null}
        />
        <option
          value={1}
        >
          First
        </option>
        <option
          value={2}
        >
          Second
        </option>
        <option
          value={3}
        >
          Third
        </option>
      </select>
      <svg
        className="icon-select"
        height="21"
        stroke="currentColor"
        viewBox="0 0 21 21"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m8.5.5-4 4-4-4"
          fill="none"
          strokeLinecap="round"
          strokeLinejoin="round"
          transform="translate(6 8)"
        />
      </svg>
    </div>
  </div>
</div>
`;
